fix show link spacing

--- a/src/components/Show/show.module.styl
+++ b/src/components/Show/show.module.styl
@@ -58,3 +58,6 @@ h1
   grid-column: 2
   grid-row: 1
   align-self: center
+
+.link 
+  margin-top: 1em
